--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,10 @@
 nixPkgs = ["python39", "gcc", "gcc-unwrapped"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+  "pip install --no-cache-dir -r requirements.txt",
+  "mkdir -p ~/.cache/huggingface"
+]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
