--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # API Configuration
-API_HOST=
-API_PORT=
-API_PREFIX=
+API_HOST=127.0.0.1
+API_PORT=8000
+API_PREFIX=/api/v1
 
 # External APIs
 GOOGLE_API_KEY=
