--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-google-generativeai==0.3.2
+google-generativeai>=0.8.0
 pinecone-client==2.2.4
 faiss-cpu==1.7.4
 pypdf2==3.0.1
@@ -16,4 +16,5 @@ requests==2.31.0
 numpy==1.24.3
 pandas==2.1.3
 aiofiles==23.2.1
-httpx==0.25.2 
+httpx==0.25.2
+psutil==5.9.6 
