--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-google-generativeai>=0.8.0
-pinecone-client==2.2.4
-faiss-cpu==1.7.4
-pypdf2==3.0.1
-python-docx==1.1.0
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-alembic==1.12.1
+google-genai>=0.1.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-requests==2.31.0
-numpy==1.24.3
-pandas==2.1.3
-aiofiles==23.2.1
-httpx==0.25.2
-psutil==5.9.6 
+httpx==0.25.2 
