--- a/railway.toml
+++ b/railway.toml
@@ -2,11 +2,8 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "python railway_start.py"
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
-[env]
-API_HOST = "0.0.0.0"
+restartPolicyMaxRetries = 3
