--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,4 +11,4 @@ cmds = [
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "python railway_start.py" 
+cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT" 
