--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,3 @@
-[phases.setup]
-nixPkgs = ["python39", "gcc", "gcc-unwrapped"]
-
-[phases.install]
-cmds = [
-  "pip install --no-cache-dir -r requirements.txt",
-  "mkdir -p ~/.cache/huggingface"
-]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
-
+# Let nixpacks auto-detect Python and handle pip
 [start]
 cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT" 
